<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Exalted Dice</string>
    <string name="rolled">Rolled: </string>
    <string name="email">twentycodes@gmail.com</string>
    <string name="deleteing">Deleting…</string>
    <string name="empty_msg">Click the plus button to start a new game</string>
    <string name="game_name">Game Name</string>
    <string name="create_new_game">Create New Game</string>
    <string name="delete">Delete</string>
    <string name="new_game">New Game</string>
    <string name="version_info">Version Information</string>
    <string name="email">twentycodes@gmail.com</string>
    <string name="email_about">Send an email with ideas or problems to help make this application even better! Good or bad we want to know what you think!</string>
    <string name="contact_us">Contact Us</string>
    <string name="roll">Roll!</string>
    <string name="clear_history">Clear Roll History</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="do_you_want_to_quit">Are you sure you want to quit?</string>
    <string name="total">Total: </string>
    <string name="sucesses">\nSuccesses: </string>
    <string name="rolls">Rolls: </string>
    <string name="roll_again">Roll Again</string>
    <string name="roll_again_summary">Rolls the with the same presets as the selected roll from history</string>
    <string name="calc_successes">Calculate Successes</string>
    <string name="calc_successes_summary">Calculates the total amount of success for each roll</string>
    <string name="total_plus_mod">\nTotal + Mod: </string>
    <string name="tens_count_twice_msg">10 counts as two successes</string>
    <string name="successes">Successes</string>
    <string name="tens_count_twice">Tens count twice</string>
    <string name="roll_mod">Roll Modifier</string>
    <string name="roll_mod_msg">Calculate Roll + Modifier</string>
    <string name="higlight_color">Highlight Color</string>
    <string name="higlight_color_msg">Highlights your last roll in a custom color</string>
    <string name="game_mode">Game Mode</string>
    <string name="ones_subtract">Ones Subtract</string>
    <string name="ones_subtract_msg">Ones count as -1 to your successes</string>
    <string name="success_after">Success After</string>
    <string name="success_after_msg">Choose what are counted as successes, starting at the selected value.</string>
    <string name="seven">7</string>

</resources>