<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="roll_again"
        android:summary="@string/roll_again_summary"
        android:title="@string/roll_again" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="roll_mod"
        android:summary="@string/roll_mod_msg"
        android:title="@string/roll_mod" />

    <com.TwentyCode.android.ExaltedDice.ColorDialogPreference
        android:key="color"
        android:summary="@string/higlight_color_msg"
        android:title="@string/higlight_color" />

    <PreferenceCategory android:title="@string/successes" >
    </PreferenceCategory>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="calc_successes"
        android:title="@string/calc_successes" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:dependency="calc_successes"
        android:key="tens_count_twice"
        android:summary="@string/tens_count_twice_msg"
        android:title="@string/tens_count_twice" />

    <PreferenceCategory android:title="@string/contact_us" >
        <Preference
            android:key="email"
            android:summary="@string/email_about"
            android:title="@string/email" >
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/version_info" >
        <com.TwentyCodes.android.exception.VersionInformationPreference />
    </PreferenceCategory>

</PreferenceScreen>